--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,7 @@ html {
 
 	font-size: 62.5%;
 }
-.mw{
-	width: 100%;
-	margin: auto;
 
-}
 main section form{
 	display: flex;
 	flex-direction: column;
@@ -78,8 +74,6 @@ nav ul li a {
 	font-size: 2.5rem;
 	margin: 1rem;
 	align-content: center;
-	filter: brightness(70%);
-	transition: transform 0.5s;
 }
 
 
@@ -90,35 +84,27 @@ header img{
 }
 
 body {
-	background-color: black;
+background-color: black;
 }
 
 p {
 	padding: 1rem 1rem 1rem 1rem;
 }
-
 /*ACA HAY QUE EDITAR BIEN LA BARRA PARA QUE NO SE COMA LA FOTO,*/
 nav{
-
 	background-color: #1A1A1A;
 	display: flex;
-	text-align: center;
-	top: 0;
-	left: 0;
-	right: 0;
-	justify-content: space-evenly;
-	z-index: 1;
-}
-
-nav ul li:hover {
-	filter: brightness(130%);
-	transform: scale(1.1);
-	z-index: 1;
-	color: darkred;
+    text-align: center;
+    top: 0;
+    left: 0;
+    right: 0;
+    flex-direction: row;
+    justify-content: center;
+    z-index: 1;
 }
 footer {
-	height:15vh;
 	display: flex;
+	flex-direction: row;
 	align-items: center;
 	font-family: 'Varela Round', sans-serif;
 	font-size: 3.5rem;
@@ -127,6 +113,15 @@ footer {
 	background-color: #1A1A1A;
 	color: #D9DBDE;;
 }
+
+
+
+
+main section {
+	background-image: url(../img/Marr.jpg);
+	font-family: 'Roboto', sans-serif;
+	background-size: cover;}
+
 	main section form label {
 		color: white;
 		padding: 0.5rem 0rem;
@@ -148,18 +143,23 @@ footer {
 
 		grid-area: footer;
 	}
+
+	.image{
+		width:auto;
+	}
+
 	.ft{
 		width: 250px;
 		height: auto;
 		margin: 1rem 2rem 1rem 2rem;
 		object-fit: cover;
 		filter: brightness(80%);
-		transition: transform 0.7s;
+		transition: transform 0.5s;
 		
 	}
 	.ft:hover {
 		filter: brightness(130%);
-		transform: scale(1.3);
+		transform: scale(1.5);
 		z-index: 1;
 	}
 	.blanc{
@@ -192,24 +192,14 @@ footer {
 
 .Boton {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	text-decoration: none;
-	height: 3rem;
-	width: 8Rem;
+	height: 2rem;
+	width: 7Rem;
 	background-color:#8C1212;
 	font-weight: bold;
-	margin-left: 2rem;
-	transition: .3s ease all;
-	border-radius: 5px;
-	filter: brightness(60%);
 
 }
-
-.Boton:hover{
-	background-color: red;
-	filter: brightness(120%);
-}
-
 /*creo clasespara facilitar alineacion de texto*/
 .supergrande{
 	font-size:3.5rem;
@@ -285,40 +275,38 @@ footer {
 }
 .paddingfo{
 	padding: 5rem 1rem 3rem 1rem;
-	;
-
+;
+  	
 }
 .paddingb{
 	padding-bottom: 4rem;
 }
-.pi{
-	padding-bottom: 1.5rem;
-}
+
 .contenedorgrid{
 	width:100vw;
 	height:100%;
 	display: grid;
-	align-content: space-between;
 	grid-template-columns:1;		
 	grid-template-rows: auto;
 	grid-template-areas:
 	"nav"
 	"header"
+	"main"
 	"footer"}
 
 /*media queries 768 HOME*/
 @media(min-width: 768px) 
 {
 	.contenedorgrid {
-		width:100%;
-		height:100%;
+		width:100vw;
+		height:100vh;
 		display: grid;
 		grid-template-columns:repeat(2, 1fr);
 		grid-template-rows: auto;
 		grid-gap: 7px;
 		grid-template-areas: 
 		"nav nav"
-		"header header"
+		"header main"
 		"footer footer ";
 	}
 	nav div ul li{
@@ -347,7 +335,7 @@ footer {
 		grid-gap: 7px;
 		grid-template-areas: 
 		"nav nav"
-		"header header"
+		"header main"
 		"footer footer ";
 	}
 }
@@ -355,10 +343,9 @@ footer {
 
 /* mobile firt comienzo contactos*/
 .contenedorgridcont{
-	width:100%;
-	height:100%;
+	width:100vw;
+	height:100vh;
 	display: grid;
-	align-content: space-between;
 	grid-template-columns:1;		
 	grid-template-rows: auto;
 	grid-template-areas:
@@ -373,19 +360,19 @@ footer {
 @media(min-width:768px)
 {
 	.contenedorgridcont{
-		width:100%;
-		height:100vh;
-		display:grid;
-		align-content: space-between;
+		width:100vw;
+		display: grid;
 		grid-template-columns:repeat(2, 1fr);
-		grid-template-rows:auto;
+		grid-template-rows: auto;
 		grid-template-areas: 
 		"nav nav "
 		"main header"
 		"footer footer";
 
 	}
-	
+	.log {
+		display: none;
+	}
 	nav div ul li{
 		display: inline-block;
 		align-content: center;
@@ -394,13 +381,13 @@ footer {
 	}
 }
 
-body main section form{
-	font-family: 'Roboto', sans-serif;
+body main section{
 	height: 100%;
-	width: 100%;
+	width: auto;
 	background-image: url(../img/alter.jpg);
 	background-position:left;
 	background-size: cover;
+	padding: 8rem 10rem 0rem 0rem;
 	
 }
 
@@ -411,16 +398,19 @@ body main section form{
 @media(min-width:1024px) 
 {
 	.contenedorgridcont{
-		display: grid;
 		grid-template-columns:repeat(4, 1fr);
 		grid-template-rows: auto;
 		grid-gap:8px;
 		grid-template-areas: 
 		"nav nav nav nav"
 		"main main header header"
+		"main main header  header"
 		"footer footer footer footer";
 	}
-
+	.imgnuev { 
+		width:100%;
+		height:100%;
+	}
 }
 
 /*media queries tour */
@@ -446,7 +436,6 @@ body main section form{
 		width:100%;
 		height:100vh;
 		display:grid;
-		align-content: space-between;
 		grid-template-columns:repeat(2, 1fr);
 		grid-template-rows:auto;
 		grid-template-areas: 
@@ -477,7 +466,6 @@ body main section form{
 	width:100vw;
 	height:100vh;
 	display: grid;
-	align-content: space-between;
 	grid-template-columns:repeat(1, 1fr);
 	grid-template-rows: auto;
 	grid-template-areas:
@@ -533,7 +521,6 @@ body main section form{
 	display: grid;
 	grid-template-columns:1fr;		
 	grid-template-rows: auto;
-
 	grid-template-areas:
 	"nav"
 	"header"
@@ -555,8 +542,9 @@ body main section form{
 	}
 	main div article{
 		display: flex;
-		flex-direction: column;
+		display: inline-block;
 		justify-content: space-around;
+		justify-items: space-around;
 		flex-wrap: wrap;
 		padding: 2rem 1.5rem 2rem 3rem;
 	}
@@ -571,13 +559,13 @@ body main section form{
 @media(min-width:1024px){
 
 	.contenedorgriddisco{
-		grid-template-columns:repeat(3, 1fr);
+		grid-template-columns:repeat(4, 1fr);
 		grid-template-rows: auto;
 		grid-template-areas: 
-		"nav nav nav"
-		"header header header"
-		"main main main"
-		"footer footer footer"}
+		"nav nav nav nav "
+		"header header header header"
+		"main main main main"
+		"footer footer footer footer"}
 
 	}
 	#a{
@@ -612,18 +600,18 @@ body main section form{
 	.flex2{
 		display: flex;
 		justify-content: space-evenly;
+		align-items: center;
 	}
 	.flexdisco {
-		
 		display: flex;
+		align-items: baseline;
+		align-content: space-around;
+		flex-direction: row;
 		flex-wrap: wrap;
 
 
+
 	}
-	.flexgale {
-		justify-content: space-evenly;
-		display: flex;
-		flex-wrap: wrap;}
 
 	.fm{
 		display:flex;
@@ -640,8 +628,12 @@ body main section form{
 		background-size: cover;
 	}
 
+	.log {
 
-	.hea {
+	}
+
+	header {
+		height: 100%;
 
 		background-image: url(../img/kk.gif);
 		background-size: cover;
@@ -652,44 +644,22 @@ body main section form{
 		background-size: cover;
 	}
 
-	.fondogaledis{
+.fondogaledis{
 		background-image: url(../img/bodyf.jpg);
-	}
-	.contsug{
-		font-size: 3rem;
-	}
+}
+.contsug{
+	font-size: 3rem;
+}
 
-	.bordercolo img{
-		border: solid;
-		border-color: white;
-		border-style: double;
-	}
+.bordercolo img{
+	border: solid;
+	border-color: white;
+	border-style: double;
+}
 
-	.borderdis img{
-		border: solid;
-		border-color: white;
-		align-items: center;
-		justify-content: center;
-		align-content: center;
-	}
-
-	.animacion{
-		animation: animation 5s linear infinite;
-		padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-	}
-
-	@keyframes animation {
-		0%{
-			box-shadow: 0 0 0 0 rgba(203, 202,202, 5); box-shadow: 0 0 0 0 rgba(203, 202,202, 5);
-		}
-		30%{
-			box-shadow: 0 0 0 3px rgba(203, 202,202, 5);box-shadow: 0 0 0 0 rgba(203, 202,202, 5);
-		}
-		60%{
-			box-shadow: 0 0 0 3px rgba(203, 202,202, 5);box-shadow: 0 0 0 3px rgba(203, 202,202, 5);
-		}
-		95%{
-			box-shadow: 0 0 0 0 rgba(203, 202,202, 5);box-shadow: 0 0 0 3px rgba(203, 202,202, 5);
-		}
-
-	}
+.borderdis img{
+	border: solid;
+	border-color: white;
+	align-items: center;
+	justify-content: center;
+	align-content: center;
