--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,8 @@ nav ul li a {
 	font-size: 2.5rem;
 	margin: 1rem;
 	align-content: center;
+	filter: brightness(70%);
+	transition: transform 0.5s;
 }
 
 
@@ -102,6 +104,13 @@ nav{
     justify-content: center;
     z-index: 1;
 }
+nav ul li:hover {
+	filter: brightness(130%);
+	transform: scale(1.1);
+	z-index: 1;
+	color: darkred;
+}
+
 footer {
 	display: flex;
 	flex-direction: row;
@@ -154,12 +163,12 @@ main section {
 		margin: 1rem 2rem 1rem 2rem;
 		object-fit: cover;
 		filter: brightness(80%);
-		transition: transform 0.5s;
+		transition: transform 0.7s;
 		
 	}
 	.ft:hover {
 		filter: brightness(130%);
-		transform: scale(1.5);
+		transform: scale(1.3);
 		z-index: 1;
 	}
 	.blanc{
@@ -198,8 +207,17 @@ main section {
 	width: 7Rem;
 	background-color:#8C1212;
 	font-weight: bold;
+	margin-left: 2rem;
+	transition: .3s ease all;
+	border-radius: 5px;
+	filter: brightness(60%);
 
 }
+.Boton:hover{
+	background-color: red;
+	filter: brightness(120%);
+}
+
 /*creo clasespara facilitar alineacion de texto*/
 .supergrande{
 	font-size:3.5rem;
@@ -382,12 +400,12 @@ main section {
 }
 
 body main section{
+	font-family: 'Roboto', sans-serif;
 	height: 100%;
 	width: auto;
 	background-image: url(../img/alter.jpg);
 	background-position:left;
 	background-size: cover;
-	padding: 8rem 10rem 0rem 0rem;
 	
 }
 
@@ -399,7 +417,6 @@ body main section{
 {
 	.contenedorgridcont{
 		grid-template-columns:repeat(4, 1fr);
-		grid-template-rows: auto;
 		grid-gap:8px;
 		grid-template-areas: 
 		"nav nav nav nav"
@@ -407,10 +424,7 @@ body main section{
 		"main main header  header"
 		"footer footer footer footer";
 	}
-	.imgnuev { 
-		width:100%;
-		height:100%;
-	}
+
 }
 
 /*media queries tour */
@@ -502,7 +516,6 @@ body main section{
 
 	.contenedorgridgaleria{
 		grid-template-columns:repeat(4, 1fr);
-		grid-template-rows: auto;
 
 		grid-template-areas: 
 		"nav nav nav nav"
@@ -542,7 +555,6 @@ body main section{
 	}
 	main div article{
 		display: flex;
-		display: inline-block;
 		justify-content: space-around;
 		justify-items: space-around;
 		flex-wrap: wrap;
@@ -559,13 +571,12 @@ body main section{
 @media(min-width:1024px){
 
 	.contenedorgriddisco{
-		grid-template-columns:repeat(4, 1fr);
-		grid-template-rows: auto;
+		grid-template-columns:repeat(, 1fr);
 		grid-template-areas: 
-		"nav nav nav nav "
-		"header header header header"
+		"nav nav nav"
+		"header header"
 		"main main main main"
-		"footer footer footer footer"}
+		"footer footer footer"}
 
 	}
 	#a{
@@ -600,18 +611,13 @@ body main section{
 	.flex2{
 		display: flex;
 		justify-content: space-evenly;
-		align-items: center;
 	}
 	.flexdisco {
 		display: flex;
-		align-items: baseline;
-		align-content: space-around;
-		flex-direction: row;
 		flex-wrap: wrap;
-
-
-
+		justify-content: space-evenly;
 	}
+
 
 	.fm{
 		display:flex;
@@ -662,4 +668,27 @@ body main section{
 	border-color: white;
 	align-items: center;
 	justify-content: center;
-	align-content: center;
+	align-content: center;}
+
+
+
+	.animacion{
+		animation: animation 5s linear infinite;
+		padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+	}
+
+	@keyframes animation {
+		0%{
+			box-shadow: 0 0 0 0 rgba(203, 202,202, 5); box-shadow: 0 0 0 0 rgba(203, 202,202, 5);
+		}
+		30%{
+			box-shadow: 0 0 0 3px rgba(203, 202,202, 5);box-shadow: 0 0 0 0 rgba(203, 202,202, 5);
+		}
+		60%{
+			box-shadow: 0 0 0 3px rgba(203, 202,202, 5);box-shadow: 0 0 0 3px rgba(203, 202,202, 5);
+		}
+		95%{
+			box-shadow: 0 0 0 0 rgba(203, 202,202, 5);box-shadow: 0 0 0 3px rgba(203, 202,202, 5);
+		}
+
+	}
