--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 /*AGREGAR FUENTE DE GOOGLE 
 PEGAR EL LINK ACA EN CSS*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Rubik+Wet+Paint&display=swap');
@@ -14,7 +14,7 @@ PEGAR EL LINK ACA EN CSS*/
 
 
 h1{
-	color: #8C1212;
+	color:#0d6efd;
 	font-family: 'Rubik Wet Paint', cursive;
 	font-weight:200;
 }
@@ -50,20 +50,6 @@ html {
 	font-size: 62.5%;
 }
 
-main section form{
-	display: flex;
-	flex-direction: column;
-	align-content: flex-start;
-	justify-content:baseline;
-}
-
-main section form input {
-	max-width: 20rem;
-}
-main section form textarea {
-	max-width: 20rem;
-}
-
 nav ul li a {
 	display: flex;
 	align-items: center;
@@ -71,11 +57,13 @@ nav ul li a {
 	text-decoration: none;
 	font-family: 'Rubik Wet Paint', cursive;
 	/*font-size: 140%;PREGUNTAR*/
-	font-size: 2.5rem;
+	font-size: 2.3rem;
 	margin: 1rem;
 	align-content: center;
-	filter: brightness(70%);
+	filter: brightness(80%);
 	transition: transform 0.5s;
+	color: black;
+	height: 2vh;
 }
 
 
@@ -94,7 +82,9 @@ p {
 }
 /*ACA HAY QUE EDITAR BIEN LA BARRA PARA QUE NO SE COMA LA FOTO,*/
 nav{
-	background-color: #1A1A1A;
+
+	color: #0d6efd;
+	background-color: #2C2A2A;
 	display: flex;
     text-align: center;
     top: 0;
@@ -103,13 +93,20 @@ nav{
     flex-direction: row;
     justify-content: center;
     z-index: 1;
+
 }
-nav ul li:hover {
+nav ul li a:hover {
 	filter: brightness(130%);
 	transform: scale(1.1);
 	z-index: 1;
-	color: darkred;
+	text-decoration: none;
 }
+	header {
+		height: 100%;
+		height: 100%;
+
+		
+	}
 
 footer {
 	display: flex;
@@ -119,22 +116,11 @@ footer {
 	font-size: 3.5rem;
 	font-weight:100 ;
 	justify-content: space-around;
-	background-color: #1A1A1A;
+	background-color: #2C2A2A;
 	color: #D9DBDE;;
 }
 
 
-
-
-main section {
-	background-image: url(../img/Marr.jpg);
-	font-family: 'Roboto', sans-serif;
-	background-size: cover;}
-
-	main section form label {
-		color: white;
-		padding: 0.5rem 0rem;
-	}
 	#nav {
 		grid-area: nav;
 	}
@@ -184,7 +170,9 @@ main section {
 	padding-left: 30rem;*/
 }
 
+.fondonegri {
 
+background-color:#5B5858}
 /*selector de clase*/
 .text-colorgrey {
 	color: grey;
@@ -198,7 +186,7 @@ main section {
 	max-width: auto;
 	align-items: center;
 }
-
+}
 .Boton {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.4rem;
@@ -240,7 +228,7 @@ main section {
 	margin: 1rem 2rem 1rem 11rem;
 }
 .margin2{
-	font-size: 3rem;
+	font-size: 2rem;
 	text-align: center;
 	padding: 2rem 1rem 1rem 1rem;
 
@@ -292,14 +280,18 @@ main section {
 	padding: 0rem 1rem .5rem 1rem;
 }
 .paddingfo{
-	padding: 5rem 1rem 3rem 1rem;
+	margin: 5rem 1rem 3rem 1rem;
 ;
   	
 }
 .paddingb{
 	padding-bottom: 4rem;
 }
-
+.offcanvas {
+	background-color:#5B5858;
+	display: flex;
+	flex-direction: column;
+}
 .contenedorgrid{
 	width:100vw;
 	height:100%;
@@ -318,20 +310,8 @@ main section {
 	.contenedorgrid {
 		width:100vw;
 		height:100vh;
-		display: grid;
-		grid-template-columns:repeat(2, 1fr);
-		grid-template-rows: auto;
+	
 		grid-gap: 7px;
-		grid-template-areas: 
-		"nav nav"
-		"header main"
-		"footer footer ";
-	}
-	nav div ul li{
-		display: inline-block;
-		align-content: center;
-		justify-content: center;
-		alignment-baseline: central;
 	}
 	main p { 
 		font-size: 1rem;
@@ -347,22 +327,14 @@ main section {
 @media(min-width: 1024px) 
 {
 	.contenedorgrid {
-		display: grid;
-		grid-template-columns:repeat(2, 1fr);
-		grid-template-rows: auto;
 		grid-gap: 7px;
-		grid-template-areas: 
-		"nav nav"
-		"header main"
-		"footer footer ";
-	}
-}
+	}}
 
 
 /* mobile firt comienzo contactos*/
 .contenedorgridcont{
 	width:100vw;
-	height:100vh;
+	height:100%;
 	display: grid;
 	grid-template-columns:1;		
 	grid-template-rows: auto;
@@ -379,7 +351,7 @@ main section {
 {
 	.contenedorgridcont{
 		width:100vw;
-		display: grid;
+		height: 100vh;
 		grid-template-columns:repeat(2, 1fr);
 		grid-template-rows: auto;
 		grid-template-areas: 
@@ -388,26 +360,6 @@ main section {
 		"footer footer";
 
 	}
-	.log {
-		display: none;
-	}
-	nav div ul li{
-		display: inline-block;
-		align-content: center;
-		justify-content: center;
-		alignment-baseline: central;
-	}
-}
-
-body main section{
-	font-family: 'Roboto', sans-serif;
-	height: 100%;
-	width: auto;
-	background-image: url(../img/alter.jpg);
-	background-position:left;
-	background-size: cover;
-	
-}
 
 /* mobile firt comienzo home*/
 
@@ -429,8 +381,6 @@ body main section{
 
 /*media queries tour */
 .contenedorgridtour{
-	width:100vw;
-	height:100vh;
 	display:grid;
 	grid-template-columns:repeat(1, 1fr);
 	grid-template-rows:auto;
@@ -448,9 +398,8 @@ body main section{
 {
 	.contenedorgridtour{
 		width:100%;
-		height:100vh;
 		display:grid;
-		grid-template-columns:repeat(2, 1fr);
+		grid-template-columns:repeat(2);
 		grid-template-rows:auto;
 		grid-template-areas: 
 		"nav nav "
@@ -465,12 +414,6 @@ body main section{
 	.contenedorgridtour{
 		grid-gap:7px;
 
-	}
-	nav div ul li{
-		display: inline-block;
-		align-content: center;
-		justify-content: center;
-		alignment-baseline: central;
 	}
 
 	
@@ -558,14 +501,6 @@ body main section{
 		justify-content: space-around;
 		justify-items: space-around;
 		flex-wrap: wrap;
-		padding: 2rem 1.5rem 2rem 3rem;
-	}
-	nav div ul li{
-		display: inline-block;
-		align-content: center;
-		justify-content: center;
-		alignment-baseline: central;
-	}
 }
 
 @media(min-width:1024px){
@@ -618,31 +553,11 @@ body main section{
 		justify-content: space-evenly;
 	}
 
-
-	.fm{
-		display:flex;
-		align-items: center;
+	.contactu{
+		display: flex;
 		flex-direction: column;
-		justify-items: center;
-		justify-content:flex-start;
-
-	}
-
-
-	.bg{
-		background-image: url(../img/giphy.gif);
-		background-size: cover;
-	}
-
-	.log {
-
-	}
-
-	header {
-		height: 100%;
-
-		background-image: url(../img/kk.gif);
-		background-size: cover;
+		flex-wrap: wrap;
+		align-content: center;
 	}
 
 	.fnd{
@@ -692,3 +607,20 @@ body main section{
 		}
 
 	}
+
+.nav-link{
+	font-size: 2.5rem;
+	padding-bottom: 2rem;
+	color:black;
+	font-size: bold;
+	font-weight: 400;
+	font-family: 'Roboto', sans-serif;
+transition: transform .3s ease-in-out;
+
+}
+
+.j{
+	align-content: center;
+	justify-content:center;
+}
+
