--- a/css/style.css
+++ b/css/style.css
@@ -57,13 +57,12 @@ nav ul li a {
 	text-decoration: none;
 	font-family: 'Rubik Wet Paint', cursive;
 	/*font-size: 140%;PREGUNTAR*/
-	font-size: 2.3rem;
-	margin: 1rem;
+	font-size: 2rem;
 	align-content: center;
 	filter: brightness(80%);
 	transition: transform 0.5s;
 	color: black;
-	height: 2vh;
+	height:.7vh;
 }
 
 
@@ -71,18 +70,18 @@ header img{
 	width: 100%;
 	height: 100%;
 
+
 }
 
 body {
 background-color: black;
 }
 
-p {
+p { font
 	padding: 1rem 1rem 1rem 1rem;
 }
 /*ACA HAY QUE EDITAR BIEN LA BARRA PARA QUE NO SE COMA LA FOTO,*/
 nav{
-
 	color: #0d6efd;
 	background-color: #2C2A2A;
 	display: flex;
@@ -93,20 +92,40 @@ nav{
     flex-direction: row;
     justify-content: center;
     z-index: 1;
+  
 
+}
+nav ul{
+	align-content: center;
+	align-items: center;
+	list-style: none;
+	font-size: 2rem;
+	padding: 1rem;
+}
+nav ul li
+{
+	padding: 1.5rem;
 }
 nav ul li a:hover {
 	filter: brightness(130%);
 	transform: scale(1.1);
 	z-index: 1;
 	text-decoration: none;
+	height: 2vh;
 }
-	header {
-		height: 100%;
-		height: 100%;
 
-		
-	}
+.animacion__footer
+{
+filter: brightness(80%);
+transition: transform 0.3s;
+}
+
+.animacion__footer:hover {
+	filter: brightness(130%);
+	z-index: 1;
+	transform: scale(1.2);
+	text-decoration: none;
+}
 
 footer {
 	display: flex;
@@ -117,7 +136,8 @@ footer {
 	font-weight:100 ;
 	justify-content: space-around;
 	background-color: #2C2A2A;
-	color: #D9DBDE;;
+	color: #D9DBDE;
+	
 }
 
 
@@ -154,7 +174,7 @@ footer {
 	}
 	.ft:hover {
 		filter: brightness(130%);
-		transform: scale(1.3);
+		transform: scale(1.1);
 		z-index: 1;
 	}
 	.blanc{
@@ -219,7 +239,7 @@ background-color:#5B5858}
 }
 
 .medio{
-	font-size: 1.5rem;
+	font-size: 1.8rem;
 }
 .chico{
 	font-size: 1rem;
@@ -237,10 +257,7 @@ background-color:#5B5858}
 	background-image: url(../img/fondo.png);
 	background-size: cover ;
 }
-.fondogri{
-	background-color: #171616;
 
-}
 .paddingdere {
 	padding: 1rem 1rem 1 rem 5 rem;
 }
@@ -284,6 +301,10 @@ background-color:#5B5858}
 ;
   	
 }
+.brd{
+	border-radius: 11.375rem;
+}
+
 .paddingb{
 	padding-bottom: 4rem;
 }
@@ -294,10 +315,9 @@ background-color:#5B5858}
 }
 .contenedorgrid{
 	width:100vw;
-	height:100%;
+	height:100vh;
 	display: grid;
 	grid-template-columns:1;		
-	grid-template-rows: auto;
 	grid-template-areas:
 	"nav"
 	"header"
@@ -308,25 +328,19 @@ background-color:#5B5858}
 @media(min-width: 768px) 
 {
 	.contenedorgrid {
-		width:100vw;
-		height:100vh;
-	
 		grid-gap: 7px;
 	}
-	main p { 
-		font-size: 1rem;
-		font-family: 'Varela Round', sans-serif;
-		color: darkred;
-		font-weight: bold;
-	}
-	
 }
-
 
 /*media queries 1024 HOME*/
 @media(min-width: 1024px) 
 {
 	.contenedorgrid {
+		grid-template-columns:repeat(2, 1fr);
+		grid-template-areas: 
+		"nav nav"
+		"main header"
+		"footer footer";
 		grid-gap: 7px;
 	}}
 
@@ -334,7 +348,7 @@ background-color:#5B5858}
 /* mobile firt comienzo contactos*/
 .contenedorgridcont{
 	width:100vw;
-	height:100%;
+	height:100vh;
 	display: grid;
 	grid-template-columns:1;		
 	grid-template-rows: auto;
@@ -361,20 +375,18 @@ background-color:#5B5858}
 
 	}
 
-/* mobile firt comienzo home*/
-
 
 /*media queries 1024 contactos*/
 @media(min-width:1024px) 
 {
 	.contenedorgridcont{
-		grid-template-columns:repeat(4, 1fr);
+		grid-template-columns:repeat(3, 1fr);
 		grid-gap:8px;
 		grid-template-areas: 
-		"nav nav nav nav"
-		"main main header header"
-		"main main header  header"
-		"footer footer footer footer";
+		"nav nav nav"
+		"main header header"
+		"main header  header"
+		"footer footer footer";
 	}
 
 }
@@ -383,7 +395,6 @@ background-color:#5B5858}
 .contenedorgridtour{
 	display:grid;
 	grid-template-columns:repeat(1, 1fr);
-	grid-template-rows:auto;
 	grid-template-areas: 
 	"nav "
 	"header"
@@ -397,7 +408,6 @@ background-color:#5B5858}
 @media(min-width:768px)
 {
 	.contenedorgridtour{
-		width:100%;
 		display:grid;
 		grid-template-columns:repeat(2);
 		grid-template-rows:auto;
@@ -435,10 +445,7 @@ background-color:#5B5858}
 @media(min-width:768px)
 {
 	.contenedorgridgaleria{
-		width:100vw;
-		display:grid;
 		grid-template-columns:repeat(4, 1fr);
-		grid-template-rows:auto;
 		grid-template-areas:
 		"nav nav nav nav"
 		"header header header header"
@@ -497,6 +504,7 @@ background-color:#5B5858}
 		"footer footer footer"
 	}
 	main div article{
+
 		display: flex;
 		justify-content: space-around;
 		justify-items: space-around;
@@ -514,55 +522,37 @@ background-color:#5B5858}
 		"footer footer footer"}
 
 	}
-	#a{
-		grid-area: a;
-	}
 
-	#b{
-		grid-area: b;
+.carousel{
+	object-fit: cover;
+	float: none;
+	margin-bottom: 3rem;
+	margin-left: auto;
+	margin-right: auto;
+	width: 70%;
+	height: auto;
+}
+	.fondotour{
+		background-image: url(../img/fondto.jpg);
+		background-size: cover;
 	}
-
-	#c{
-		grid-area: c;
-	}
-
-	#d{
-		grid-area: d;
-	}
-
-	.flex{
-		display: grid;
-		grid-template-columns:repeat(2, 1fr);
-		grid-template-areas: 
-		"a a"
-		"b c"
-		"d d";
-		justify-content:space-evenly ;
-		justify-items: center;
+	.flex1{
+		display: flex;
+		justify-content: space-around;
 		align-items: center;
-		align-content: space-evenly;
-	}
-
+		align-content: center;
+		flex-direction: column;	}
 	.flex2{
 		display: flex;
-		justify-content: space-evenly;
-	}
-	.flexdisco {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-evenly;
-	}
-
-	.contactu{
-		display: flex;
-		flex-direction: column;
-		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: center;
 		align-content: center;
-	}
-
-	.fnd{
-		background-image: url(../img/tour.gif);
-		background-size: cover;
+		flex-direction: column;	}
+	.flexdisco {
+		align-items:flex-end ;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
 	}
 
 .fondogaledis{
@@ -609,7 +599,7 @@ background-color:#5B5858}
 	}
 
 .nav-link{
-	font-size: 2.5rem;
+	font-size: 2rem;
 	padding-bottom: 2rem;
 	color:black;
 	font-size: bold;
@@ -619,8 +609,14 @@ transition: transform .3s ease-in-out;
 
 }
 
-.j{
+.j{ display: flex;
+	flex-direction: column;
+	
 	align-content: center;
 	justify-content:center;
 }
 
+.fondomain{
+background-image: url(../img/fp.jpg);
+
+}
