--- a/css/style.css
+++ b/css/style.css
@@ -72,12 +72,14 @@ input {
 	border-radius:40px;
 	margin-left: 1rem;
 	margin-right: 1rem;
+	background-color: azure;
 }
 
 textarea {
 	margin-left: 1rem;
 	margin-right: 1rem;
 	resize: none;
+	  	background-color: azure;
 }
 header img{ 
 	width: 100%;
@@ -432,7 +434,7 @@ footer {
 				align-content: center;}
 
 				.contenedorgrid{
-					width:100vw;
+					width:100%;
 					height:100vh;
 					display: grid;
 					grid-template-columns:1;		
